src/test/ui/suggestions/issue-86667.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-86667.rs:6:35
   |
LL | async fn a(s1: &str, s2: &str) -> &str {
   |                ----      ----     ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `s1` or `s2`
help: consider introducing a named lifetime parameter
   |
LL | async fn a<'a>(s1: &str, s2: &str) -> &'a str {
   |           ++++                         ++

error[E0106]: missing lifetime specifier
  --> $DIR/issue-86667.rs:12:29
   |
LL | fn b(s1: &str, s2: &str) -> &str {
   |          ----      ----     ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `s1` or `s2`
help: consider introducing a named lifetime parameter
   |
LL | fn b<'a>(s1: &str, s2: &str) -> &'a str {
   |     ++++                         ++

error[E0759]: `s1` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/issue-86667.rs:6:12
   |
LL | async fn a(s1: &str, s2: &str) -> &str {
   |            ^^  ---- this data with an anonymous lifetime `'_`...
   |            |
   |            ...is used here...
...
LL |     s1
   |     -- ...and is required to live as long as `'static` here

error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/issue-86667.rs:14:5
   |
LL |     s1
   |     ^^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the anonymous lifetime defined here
  --> $DIR/issue-86667.rs:12:10
   |
LL | fn b(s1: &str, s2: &str) -> &str {
   |          ^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0106, E0312, E0759.
For more information about an error, try `rustc --explain E0106`.
